--- a/app/src/main/res/layout/images_list_item.xml
+++ b/app/src/main/res/layout/images_list_item.xml
@@ -8,5 +8,7 @@
     <ImageView
         android:id="@+id/imageview"
         android:layout_width="120dp"
-        android:layout_height="120dp"/>
+        android:layout_height="120dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
 </LinearLayout>
