--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,11 +2,6 @@
 
     <SwitchPreference
         android:defaultValue="true"
-        android:key="antialias"
-        android:summary="@string/pref_description_antialias"
-        android:title="@string/pref_title_antialias"/>
-    <SwitchPreference
-        android:defaultValue="true"
         android:key="filter_bitmap"
         android:summary="@string/pref_description_filter_bitmap"
         android:title="@string/pref_title_filter_bitmap"/>
@@ -15,5 +10,10 @@
         android:key="dither"
         android:summary="@string/pref_description_dither"
         android:title="@string/pref_title_dither"/>
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="antialias"
+        android:summary="@string/pref_description_antialias"
+        android:title="@string/pref_title_antialias"/>
 
 </PreferenceScreen>
